fix: header was hidden by cards

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -10,6 +10,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 9999;
 
   .profilePic {
     font-size: 0;
